# sdl-sensor-example

./: CMakeLists.txt  main.c
